# placeholder

./: .clang-format  .clang-tidy  .cppcheck-suppressions  .envrc  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  actor.podspec.json  crypto3.nix  debug-tools.nix  develop.nix  evm-assigner.nix  find_symbol.sh  flake.nix  gpu_gpustat_monitor.sh  lzpatcher.sh  mtl.actor.podspec.json  nclang++  opensycl.nix  parallel-crypto3.nix  parse_benchmarks.py  parse_tests.py  proof-producer.nix  readme.md  requirements.txt  run.sh  verify-proofs.nix  zkevm-framework.nix
crypto3/: .gitignore  CMakeLists.txt  crypto3.nix  readme.md
crypto3/benchmarks/: CMakeLists.txt  algebra_benchmark.xml  modular_fixed_multiprecision_benchmark.xml  multiexpr_benchmark.xml
crypto3/benchmarks/algebra/: curves.cpp  fields.cpp  multiexp.cpp
crypto3/benchmarks/math/: polynomial_dfs.cpp
crypto3/benchmarks/multiprecision/: big_int.cpp  big_mod.cpp  modular_adaptor_fixed.cpp
crypto3/benchmarks/zk/: lpc.cpp  pedersen.cpp
crypto3/cmake/: CheckSSE.cmake
crypto3/cmake/modules/test/: CMakeLists.txt
crypto3/docs/manual/: index.md  intermediate.md  quickstart.md
crypto3/libs/algebra/: CMakeLists.txt  readme.md
crypto3/libs/algebra/docs/: implementation.md
crypto3/libs/algebra/example/: CMakeLists.txt  curves.cpp  fields.cpp  multiexp.cpp  pairing.cpp  random_element.cpp  short_weierstrass_coordinates.cpp
crypto3/libs/algebra/test/: CMakeLists.txt  curves.cpp  curves_original.cpp  curves_simple.cpp  curves_static.cpp  fields.cpp  fields_static.cpp  fpn.cpp  matrix.cpp  multiexp.cpp  pairing.cpp  short_weierstrass_coordinates.cpp  type_traits.cpp  type_traits_testing.cpp  vector.cpp
crypto3/libs/benchmark_tools/: CMakeLists.txt
crypto3/libs/block/: CMakeLists.txt
crypto3/libs/block/docs/: usage.md
crypto3/libs/block/test/: CMakeLists.txt
crypto3/libs/blueprint/: CMakeLists.txt  readme.md
crypto3/libs/blueprint/docs/: concepts.md  usage.md
crypto3/libs/blueprint/example/: CMakeLists.txt  curves.cpp
crypto3/libs/blueprint/test/: CMakeLists.txt  component_batch.cpp  define_common_tests.cmake  define_non_native_with_proof_generation.cmake  flexible_poseidon_circuit.crct  flexible_poseidon_table.tbl  gate_id.cpp  manifest.cpp  private_input.cpp  proxy.cpp  test_macro_definition.cmake  test_plonk_component.cpp  test_plonk_component.hpp  test_plonk_component0_table.tbl  test_plonk_component1_circuit.crct
crypto3/libs/codec/: CMakeLists.txt
crypto3/libs/codec/test/: CMakeLists.txt
crypto3/libs/containers/: CMakeLists.txt  readme.md
crypto3/libs/containers/example/: CMakeLists.txt
crypto3/libs/containers/test/: CMakeLists.txt
crypto3/libs/hash/: CMakeLists.txt  README.md  readme.md
crypto3/libs/hash/docs/: implementation.md  pack.md
crypto3/libs/hash/example/: CMakeLists.txt  hashes.cpp
crypto3/libs/hash/test/: CMakeLists.txt  crc.cpp  find_group_hash.cpp  h2c.cpp  h2f.cpp  hash_to_curve.cpp  keccak.cpp  pedersen.cpp  poseidon.cpp  sha2.cpp  sha3.cpp  tiger.cpp  tmp_poseidon_constexpr_generation.cpp  type_traits.cpp
crypto3/libs/kdf/: CMakeLists.txt
crypto3/libs/mac/: CMakeLists.txt
crypto3/libs/marshalling/: readme.md
crypto3/libs/math/: CMakeLists.txt  readme.md
crypto3/libs/modes/: CMakeLists.txt
crypto3/libs/multiprecision/: CMakeLists.txt  readme.md
crypto3/libs/parallelization-utils/: CMakeLists.txt
crypto3/libs/passhash/: CMakeLists.txt
crypto3/libs/pbkdf/: CMakeLists.txt
crypto3/libs/pch/: CMakeLists.txt
crypto3/libs/pkpad/: CMakeLists.txt
crypto3/libs/pubkey/: CMakeLists.txt
crypto3/libs/random/: CMakeLists.txt  readme.md
crypto3/libs/stream/: CMakeLists.txt
crypto3/libs/threshold/: CMakeLists.txt
crypto3/libs/transpiler/: CMakeLists.txt  readme.md
crypto3/libs/vdf/: CMakeLists.txt
crypto3/libs/zk/: CMakeLists.txt  readme.md
debug-tools/: CMakeLists.txt  debug-tools.nix
debug-tools/cmake/: Config.cmake.in
evm-assigner/lib/assigner/: CMakeLists.txt
libs/parallel-zk/: CMakeLists.txt  README.md
libs/parallel-zk/test/: CMakeLists.txt
parallel-crypto3/: CMakeLists.txt  flake.nix  parallel-crypto3.nix  readme.md
parallel-crypto3/.github/workflows/: crypto3-testing-linux.yml  pull-request.yml
parallel-crypto3/benchmarks/: CMakeLists.txt  polynomial_dfs_benchmark.cpp
parallel-crypto3/cmake/: Config.cmake.in
parallel-crypto3/libs/parallel-blueprint/: CMakeLists.txt
parallel-crypto3/libs/parallel-containers/: CMakeLists.txt  readme.md
parallel-crypto3/libs/parallel-math/: CMakeLists.txt  crypto3.math.podspec.json  readme.md
parallel-crypto3/libs/parallel-zk/: CMakeLists.txt  crypto3.zk.podspec.json  readme.md
parallel-crypto3/libs/parallelization-utils/: CMakeLists.txt
parallel-crypto3/parallel-crypto3/: CMakeLists.txt
proof-producer/: CMakeLists.txt  README.md  proof-producer.nix  readme.md
proof-producer/benchmarks/: circuits.py  dfri.py  main.py  readme.md  requirements.txt  run_and_post.sh  runner.py  signoz_post.py  single_circuits.py
proof-producer/benchmarks/traces/: benchmark_data.sol  generate_traces.sh
proof-producer/cmake/: Config.cmake.in
proof-producer/libs/assigner/: CMakeLists.txt
proof-producer/libs/output_artifacts/: CMakeLists.txt
proof-producer/libs/preset/: CMakeLists.txt
proof-producer/libs/types/: CMakeLists.txt
proof-producer/tests/: 00-preprocessor.sh  01-partial-proof.sh  02-gen-challenges.sh  03-compute-combined-Q.sh  04-aggregated-FRI.sh  05-consistency-checks.sh  06-merge-proofs.sh  99-run-all.sh  CMakeLists.txt  make_proof_for_pairs.sh
proof-producer/tests/libs/: CMakeLists.txt
transpiler/: CMakeLists.txt  transpiler.nix
transpiler/cmake/: Config.cmake.in
transpiler/test/: CMakeLists.txt
zkevm-framework/: CMakeLists.txt  zkevm-framework.nix
zkevm-framework/libs/assigner_runner/: CMakeLists.txt
zkevm-framework/libs/json_helpers/: CMakeLists.txt
zkevm-framework/libs/nil_core/: CMakeLists.txt
zkevm-framework/libs/output_artifacts/: CMakeLists.txt
zkevm-framework/libs/preset/: CMakeLists.txt
zkevm-framework/libs/rpc/: CMakeLists.txt
(+3592 files in other folders)
